syntax = "proto3";

package co.bbt.ref.proto;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service ItemService {
    rpc createItem(ItemProto) returns (ItemProto) {}
    rpc updateItem(ItemProto) returns (ItemProto) {}
    rpc findItem(ItemIdProto) returns (ItemProto) {}
    rpc findAll(google.protobuf.Empty) returns(ItemsProto) {}
    rpc deleteItem(ItemIdProto) returns (ItemDeleteMsgProto) {}
}

message ItemIdProto {
    google.protobuf.StringValue id = 1;
}
message ItemsProto {
    repeated ItemProto items = 1;
}

message ItemProto {
    google.protobuf.StringValue id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue description = 3;
    google.protobuf.Int64Value price = 4;
    google.protobuf.StringValue category = 5;
}


message ItemDeleteMsgProto {
    google.protobuf.StringValue message = 1;
}